# mpc_ros_description

./: README.md
mpc_ros_description/: CMakeLists.txt  package.xml
mpc_ros_description/launch/: ackermann_model.launch  bicycle_model.launch  differential_model.launch  holonomic_model.launch  models.launch
mpc_ros_description/urdf/ackermann/: ackermann.urdf.xacro
mpc_ros_description/urdf/bicycle/: bicycle_bot.urdf.xacro
mpc_ros_description/urdf/car_like/: ackermann.urdf.xacro
mpc_ros_description/urdf/diff/: differential_bot.gazebo.xacro  differential_bot.urdf.xacro
mpc_ros_description/urdf/holonomic/: holonomic.gazebo.xacro  holonomic.urdf.xacro
